# python-cfdiclient

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  Pipfile  README.md  ejemplo_autenticacion.py  ejemplo_completo.py  ejemplo_descargamasiva.py  ejemplo_solicitadescarga.py  ejemplo_validacioncfdi.py  ejemplo_verificasolicituddescarga.py  pylint.rc  pyproject.toml  requirements.txt  setup.py
.claude/agents/: engineering-devops-automator.md  engineering-qa-test-engineer.md  engineering-sat-domain-analyst.md  engineering-security-engineer.md  engineering-senior-python-developer.md  engineering-software-architect.md  engineering-technical-writer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  continuous_deployment.yml  continuous_integration.yml  greetings.yml  prerelease.yml  publish.yml  release.yml  stale.yml  test.yml
certificados/: ejemploKey.key  ejemploPem.pem
cfdiclient/: __init__.py  autenticacion.py  autenticacion.xml  client.py  config.py  descargamasiva.py  descargamasiva.xml  exceptions.py  fiel.py  models.py  signer.py  signer.xml  solicitadescarga.py  solicitadescarga.xml  solicitadescargaEmitidos.py  solicitadescargaEmitidos.xml  solicitadescargaRecibidos.py  solicitadescargaRecibidos.xml  transport.py  utils.py  validacioncfdi.py  verificasolicituddescarga.py  verificasolicituddescarga.xml  webservicerequest.py  xml_builder.py
cfdiclient/services/: __init__.py  autenticacion.py  descarga.py  solicitud.py  validacion.py  verificacion.py
docs/: sat_emulator_guide.md  v2_architecture.md  v2_security_audit.md  v2_spec.md  v2_test_coverage.md
src/: __init__.py  validacioncfdi.py
tests/: conftest.py  sat_emulator.py  test_cfdiclient.py  test_cfdiclient_v2.py  test_integration.py
